# IfcSewerage

./: CMakeLists.txt  IfcSyntax.md  README.md
IfcSeverage/: CMakeLists.txt  IfcSeverage.cpp  IfcSeverage.h  Utils.cpp  Utils.h
